# trees-in-gadt

./: .build.yml  .gitignore  .ocamlformat  LICENSE  PLAN.md  README  dune-project  gadt.opam  test-build.sh
lib/: dune  gadt.ml
test/: avl.ml  bst.ml  debug_crash.ml  dune  fuzz_afl.ml  fuzz_avl.ml  fuzz_bst.ml  gadt_avl_test.ml  proptest_avl.ml  proptest_avl_gadt.ml  test_avl_qcheck.ml  test_gadt.ml
