(library
 (name test_gadt)
 (modules bst avl)
 (libraries gadt base)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert)))

; AFL-native fuzz test (requires AFL-enabled OCaml switch)

(executable
 (name fuzz_afl)
 (modules fuzz_afl)
 (libraries gadt base afl-persistent)
 (optional)
 (ocamlopt_flags
  (:standard -afl-instrument)))
